The Green Triangle is back! Yay!
On a side note, after being frustrated for quite a while because
I couldn't figure out why the triangle wasn't showing, it turns
out that I mistyped a flag from "max" to "min" so I had been setting
a "min" flag twice. I am truly a very silly man.

--- a/VoxelEngine/VoxelEngine.vcxproj
+++ b/VoxelEngine/VoxelEngine.vcxproj
@@ -61,6 +61,10 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>d3d11.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <FxCompile>
+      <ShaderModel>5.0</ShaderModel>
+      <EntryPointName>main</EntryPointName>
+    </FxCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -81,20 +85,39 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="engine\Camera.cpp" />
+    <ClCompile Include="engine\ColorShader.cpp" />
     <ClCompile Include="engine\D3DClass.cpp" />
     <ClCompile Include="engine\GraphicsSystem.cpp" />
     <ClCompile Include="engine\InputSystem.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="engine\Model.cpp" />
     <ClCompile Include="window\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="engine\Camera.h" />
+    <ClInclude Include="engine\ColorShader.h" />
     <ClInclude Include="engine\D3DClass.h" />
     <ClInclude Include="engine\GraphicsSystem.h" />
     <ClInclude Include="engine\InputSystem.h" />
+    <ClInclude Include="engine\Model.h" />
     <ClInclude Include="window\Window.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Shaders.shader" />
+    <None Include="engine\ColorPixelShader.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
+      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">main</EntryPointName>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
+      <FileType>Document</FileType>
+    </None>
+    <None Include="engine\ColorVertexShader.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
+      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">main</EntryPointName>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
+      <FileType>Document</FileType>
+    </None>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
