--- a/VoxelEngine/VoxelEngine.vcxproj.filters
+++ b/VoxelEngine/VoxelEngine.vcxproj.filters
@@ -27,22 +27,22 @@
     <ClCompile Include="window\Window.cpp">
       <Filter>Source Files\window</Filter>
     </ClCompile>
-    <ClCompile Include="engine\InputSystem.cpp">
+    <ClCompile Include="engine\input\InputSystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="engine\D3DClass.cpp">
+    <ClCompile Include="engine\graphics\Camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="engine\GraphicsSystem.cpp">
+    <ClCompile Include="engine\graphics\ColorShader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="engine\Model.cpp">
+    <ClCompile Include="engine\graphics\D3DClass.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="engine\ColorShader.cpp">
+    <ClCompile Include="engine\graphics\GraphicsSystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="engine\Camera.cpp">
+    <ClCompile Include="engine\graphics\Model.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -50,27 +50,31 @@
     <ClInclude Include="window\Window.h">
       <Filter>Source Files\window</Filter>
     </ClInclude>
-    <ClInclude Include="engine\GraphicsSystem.h">
+    <ClInclude Include="engine\input\InputSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="engine\InputSystem.h">
+    <ClInclude Include="engine\graphics\Model.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="engine\D3DClass.h">
+    <ClInclude Include="engine\graphics\Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="engine\Model.h">
+    <ClInclude Include="engine\graphics\ColorShader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="engine\ColorShader.h">
+    <ClInclude Include="engine\graphics\D3DClass.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="engine\Camera.h">
+    <ClInclude Include="engine\graphics\GraphicsSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="engine\ColorPixelShader.hlsl" />
-    <None Include="engine\ColorVertexShader.hlsl" />
+    <None Include="shaders\ColorVertexShader.hlsl" />
+    <None Include="shaders\ColorPixelShader.hlsl" />
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="shaders\TextureVS.hlsl" />
+    <FxCompile Include="shaders\TexturePS.hlsl" />
   </ItemGroup>
 </Project>
