--- a/VoxelEngine/VoxelEngine.vcxproj
+++ b/VoxelEngine/VoxelEngine.vcxproj
@@ -92,6 +92,8 @@
     <ClCompile Include="engine\input\InputSystem.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="engine\graphics\Model.cpp" />
+    <ClCompile Include="engine\graphics\Texture.cpp" />
+    <ClCompile Include="engine\graphics\TextureShader.cpp" />
     <ClCompile Include="window\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -101,6 +103,8 @@
     <ClInclude Include="engine\graphics\GraphicsSystem.h" />
     <ClInclude Include="engine\input\InputSystem.h" />
     <ClInclude Include="engine\graphics\Model.h" />
+    <ClInclude Include="engine\graphics\Texture.h" />
+    <ClInclude Include="engine\graphics\TextureShader.h" />
     <ClInclude Include="window\Window.h" />
   </ItemGroup>
   <ItemGroup>
@@ -130,6 +134,9 @@
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
       <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">TextureVertexShader</EntryPointName>
     </FxCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="data\seafloor.dds" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
