--- a/VoxelEngine/VoxelEngine.vcxproj
+++ b/VoxelEngine/VoxelEngine.vcxproj
@@ -89,6 +89,7 @@
     <ClCompile Include="engine\graphics\ColorShader.cpp" />
     <ClCompile Include="engine\graphics\D3DClass.cpp" />
     <ClCompile Include="engine\graphics\GraphicsSystem.cpp" />
+    <ClCompile Include="engine\graphics\LightShader.cpp" />
     <ClCompile Include="engine\input\InputSystem.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="engine\graphics\Model.cpp" />
@@ -101,6 +102,7 @@
     <ClInclude Include="engine\graphics\ColorShader.h" />
     <ClInclude Include="engine\graphics\D3DClass.h" />
     <ClInclude Include="engine\graphics\GraphicsSystem.h" />
+    <ClInclude Include="engine\graphics\LightShader.h" />
     <ClInclude Include="engine\input\InputSystem.h" />
     <ClInclude Include="engine\graphics\Model.h" />
     <ClInclude Include="engine\graphics\Texture.h" />
@@ -124,6 +126,16 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <FxCompile Include="shaders\LightPS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
+      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">LightPixelShader</EntryPointName>
+    </FxCompile>
+    <FxCompile Include="shaders\LightVS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
+      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">LightVertexShader</EntryPointName>
+    </FxCompile>
     <FxCompile Include="shaders\TexturePS.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
